# mesa

./: .gitignore  .gitlab-ci.yml  .mailmap  .pick_status.json  .travis.yml  Android.common.mk  Android.mk  Makefile  Makefile.am  SConstruct  VERSION  common.py  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: create-rootfs.sh  deqp-freedreno-a307-fails.txt  deqp-freedreno-a630-bypass-fails.txt  deqp-freedreno-a630-fails.txt  deqp-freedreno-a630-flakes.txt  deqp-freedreno-a630-noubo-fails.txt  deqp-lima-fails.txt  deqp-llvmpipe-fails.txt  deqp-panfrost-t860-fails.txt  deqp-radv-raven-aco-skips.txt  deqp-runner.sh  deqp-softpipe-fails.txt  deqp-virgl-fails.txt  image-tags.yml  lava-deqp.yml.jinja2  lava-gitlab-ci.yml  prepare-artifacts.sh  traces.yml
.gitlab-ci/bare-metal/: fastboot.sh
.gitlab-ci/common/: init-stage2.sh
.gitlab-ci/container/: build-crosvm.sh  build-deqp-runner.sh  build-deqp.sh  build-piglit.sh  create-rootfs.sh  lava_build.sh
.gitlab-ci/lava/: lava-submit.sh
.gitlab-ci/piglit/: build-piglit_backport-s3-migration.diff  piglit-traces.sh  quick_shader.txt
.gitlab-ci/test/: gitlab-ci.yml
.gitlab-ci/windows/: mesa_deps.ps1  quick_gl.txt
android/: mesa3d_cross.mk
configs/: aix-static  autoconf.in  darwin  debian  debian-alpha  debian-alpha-ev5  debian-amd64  debian-any  debian-arch  debian-common  debian-debug  debian-debug_i386  debian-default  debian-directfb  debian-dri  debian-dri-amd64  debian-dri-any  debian-dri-arch  debian-dri-common  debian-dri-default  debian-dri-i386  debian-dri-i386-i686  debian-dri-optimized-default  debian-dri-powerpc  debian-glide  debian-glide_i386  debian-i386  debian-i386-i686  debian-indirect  debian-indirect-default  debian-indirect-hurd-i386  debian-osmesa  debian-osmesa-default  debian-osmesa-static  debian-osmesa16  debian-osmesa16-static  debian-osmesa32  debian-osmesa32-static  debian-powerpc  debian-powerpc-603  (+31 more)
configs/CVS/: Entries  Tag
debian/: README.Debian  README.build  README.source  Xsession.d_65mesa-check-x86-64  changelog  clean  control  copyright  drivers.map  egl.pc  gbp.conf  git-cleanup.sh  glesv1_cm.pc  glesv2.pc  glxinfo.1  libdir.map  libegl-mesa0.postinst.in  libegl1-mesa-dev.install  libegl1-mesa-dev.install.in  libegl1-mesa-dev.install.linux.in  libegl1-mesa-dev.links.in  libegl1-mesa-drivers-kms.install  libegl1-mesa-drivers-x11.install  libegl1-mesa-drivers.install  libegl1-mesa-drivers.install.in  libegl1-mesa-drivers.install.linux.in  libegl1-mesa.install  libegl1-mesa.install.in  libegl1-mesa.postinst.in  libegl1-mesa.prerm.in  libegl1-mesa.symbols  libg3dvl-mesa.install.in  libgbm-dev.install.in  libgbm1.install.in  libgbm1.symbols  libgl1-mesa-dev.install  libgl1-mesa-dev.install.in  libgl1-mesa-dev.links  libgl1-mesa-dev.links.in  libgl1-mesa-dri-experimental.install  (+95 more)
debian/patches/: 0001-i965-fs-Remove-creation-of-a-MOV-instruction-that-s-.patch  0001-intel-blorp_blit-Create-structure-for-src-dst-coordi.patch  0001-nv50-fix-3D-render-target-setup.patch  0001-util-format-NEON-is-not-available-with-the-soft-floa.patch  0002-i965-fs-Move-varying-uniform-offset-compuation-into-.patch  0002-intel-blorp_blit-Split-blorp-blits-if-they-are-too-l.patch  0002-nv50-nvc0-disable-DEPTH_RANGE_NEAR-FAR-clipping-duri.patch  0003-i965-Make-the-constant-surface-interface-take-a-norm.patch  0003-intel-blorp_blit-Adjust-blorp-surface-parameters-for.patch  0003-nv50-nvc0-fix-3d-blits-restore-viewport-after-blit.patch  0004-i965-Make-the-fragment-shader-pull-constants-index-b.patch  0004-intel-blorp-Always-use-UINT-formats-on-SKL.patch  0004-nvc0-fix-for-2d-engine-R-source-formats-writing-RRR1.patch  0005-i965-fs-Avoid-inappropriate-optimization-with-regs_w.patch  0005-intel-blorp_blit-Move-RGB-R-conversion-to-follow-bli.patch  0006-i965-fs-Improve-performance-of-varying-index-uniform.patch  00_create-libdir.patch  (+196 more)
docs/: MESA_packed_depth_stencil.spec  MESA_program_debug.spec  MESA_resize_buffers.spec  MESA_sprite_point.spec  MESA_trace.spec  MESA_window_pos.spec  README.BEOS  README.QUAKE  RELNOTES-3.1  RELNOTES-3.2  RELNOTES-3.2.1  RELNOTES-3.3  RELNOTES-3.4  RELNOTES-3.4.1  RELNOTES-3.4.2  RELNOTES-3.5  RELNOTES-4.0  RELNOTES-4.0.1  RELNOTES-4.0.2  RELNOTES-4.0.3  RELNOTES-4.1  RELNOTES-5.0  RELNOTES-5.0.1  RELNOTES-5.0.2  RELNOTES-6.0  RELNOTES-6.0.1  RELNOTES-6.1  RELNOTES-6.2  RELNOTES-6.2.1  RELNOTES-6.3  RELNOTES-6.3.1  RELNOTES-6.3.2  RELNOTES-6.4  RELNOTES-6.4.1  RELNOTES-6.4.2  RELNOTES-6.5  download.html  egl.rst  envvars.rst  features.txt  (+37 more)
scons/: crossmingw.py  gallium.py  llvm.py
src/: Makefile.am  meson.build
src/gallium/drivers/grate/: Automake.inc  Makefile.am  class_ids.h  grate_common.h  grate_compiler.h  grate_compiler_fp.c  grate_compiler_vpe.c  grate_context.c  grate_context.h  grate_draw.c  grate_draw.h  grate_fp_ir.c  grate_fp_ir.h  grate_fp_vliw.h  grate_program.c  grate_program.h  grate_resource.c  grate_resource.h  grate_screen.c  grate_screen.h  grate_state.c  grate_state.h  grate_stream.c  grate_stream.h  grate_surface.c  grate_surface.h  grate_vpe_ir.c  grate_vpe_ir.h  host1x01_hardware.h  meson.build  tgr_3d.xml.h
src/gallium/drivers/grate/drm/: opentegra_drm.h  opentegra_lib.h  private.h  tegra.c  tegra_bo_cache.c
src/gallium/drivers/grate/drm/uapi_v1/: channel.c  fence.c  job.c  pushbuf.c  uapi_v1.h
src/gallium/drivers/grate/drm/uapi_v2/: job.c
src/gallium/drivers/grate/fp/: fpir.h  pack.c  tgsi.c  vliw.h
src/gallium/drivers/grate/vp/: pack.c  tgsi.c  vpir.h
src/gallium/drivers/tegra/: Automake.inc  Makefile.am  fp_ir.c  fp_ir.h  host1x01_hardware.h  meson.build  tegra_common.h  tegra_compiler.h  tegra_compiler_fp.c  tegra_compiler_vpe.c  tegra_context.c  tegra_context.h  tegra_draw.c  tegra_draw.h  tegra_fence.h  tegra_program.c  tegra_program.h  tegra_resource.c  tegra_resource.h  tegra_screen.c  tegra_screen.h  tegra_state.c  tegra_state.h  tegra_stream.c  tegra_stream.h  tegra_surface.c  tegra_surface.h  vpe_ir.c  vpe_ir.h
src/gallium/winsys/grate/drm/: Makefile.sources  grate_drm_public.h  grate_drm_winsys.c  meson.build
(+2033 files in other folders)
